--- a/alpine-consul-rethinkdb/Dockerfile
+++ b/alpine-consul-rethinkdb/Dockerfile
@@ -5,5 +5,7 @@ RUN apk add rethinkdb --update-cache \
     --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ \
     --allow-untrusted
 
-#   process cluster webui
+ADD root /
+
+#    process cluster webui
 EXPOSE 28015 29015 8080
