Add initial jupyter image

--- a/alpine-consul-rethinkdb/Dockerfile
+++ b/alpine-consul-rethinkdb/Dockerfile
@@ -7,5 +7,5 @@ RUN apk add rethinkdb --update-cache \
 
 ADD root /
 
-#    process cluster webui
-EXPOSE 28015 29015 8080
+#    process cluster
+EXPOSE 28015 29015
